// auth_service.proto - 认证服务gRPC接口
syntax = "proto3";

package isa.auth;

option go_package = "github.com/isa-cloud/isa_cloud/pkg/proto/auth";

import "common.proto";
import "google/protobuf/timestamp.proto";

// ========================================
// 认证服务
// ========================================

service AuthService {
    // Token验证
    rpc VerifyToken(TokenVerificationRequest) returns (TokenVerificationResponse);
    
    // API Key验证  
    rpc VerifyAPIKey(APIKeyVerificationRequest) returns (APIKeyVerificationResponse);
    
    // 生成开发Token
    rpc GenerateDevToken(DevTokenRequest) returns (DevTokenResponse);
    
    // 获取用户信息
    rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse);
    
    // API Key管理
    rpc CreateAPIKey(CreateAPIKeyRequest) returns (CreateAPIKeyResponse);
    rpc ListAPIKeys(ListAPIKeysRequest) returns (ListAPIKeysResponse);
    rpc RevokeAPIKey(RevokeAPIKeyRequest) returns (RevokeAPIKeyResponse);
}

// ========================================
// Token验证
// ========================================

message TokenVerificationRequest {
    string token = 1;
    string provider = 2; // auth0, supabase, local
}

message TokenVerificationResponse {
    bool valid = 1;
    string provider = 2;
    string user_id = 3;
    string email = 4;
    string organization_id = 5;
    google.protobuf.Timestamp expires_at = 6;
    string error = 7;
    isa.common.AuthContext auth_context = 8;
}

// ========================================
// API Key验证
// ========================================

message APIKeyVerificationRequest {
    string api_key = 1;
}

message APIKeyVerificationResponse {
    bool valid = 1;
    string key_id = 2;
    string organization_id = 3;
    string name = 4;
    repeated string permissions = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp last_used = 7;
    string error = 8;
}

// ========================================
// 开发Token生成
// ========================================

message DevTokenRequest {
    string user_id = 1;
    string email = 2;
    int32 expires_in = 3; // seconds
}

message DevTokenResponse {
    bool success = 1;
    string token = 2;
    int32 expires_in = 3;
    string user_id = 4;
    string email = 5;
    string error = 6;
}

// ========================================
// 用户信息
// ========================================

message GetUserInfoRequest {
    string token = 1;
}

message GetUserInfoResponse {
    bool success = 1;
    isa.common.User user = 2;
    string provider = 3;
    google.protobuf.Timestamp expires_at = 4;
    string error = 5;
}

// ========================================
// API Key管理
// ========================================

message CreateAPIKeyRequest {
    string organization_id = 1;
    string name = 2;
    repeated string permissions = 3;
    int32 expires_days = 4; // optional
    string created_by = 5;
}

message CreateAPIKeyResponse {
    bool success = 1;
    string api_key = 2;     // only returned during creation
    string key_id = 3;
    string name = 4;
    google.protobuf.Timestamp expires_at = 5;
    string error = 6;
}

message ListAPIKeysRequest {
    string organization_id = 1;
}

message ListAPIKeysResponse {
    bool success = 1;
    repeated APIKeyInfo api_keys = 2;
    int32 total = 3;
    string error = 4;
}

message APIKeyInfo {
    string key_id = 1;
    string name = 2;
    repeated string permissions = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp last_used = 5;
    google.protobuf.Timestamp expires_at = 6;
    bool is_active = 7;
}

message RevokeAPIKeyRequest {
    string organization_id = 1;
    string key_id = 2;
}

message RevokeAPIKeyResponse {
    bool success = 1;
    string message = 2;
    string error = 3;
}